--- a/StackOverflowProject/views/partials/layout.hbs
+++ b/StackOverflowProject/views/partials/layout.hbs
@@ -28,6 +28,10 @@
                     <li><a href="#">Profile</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
+                    <!--<% if (user) { %>
+                    <li><a href="/auth/register"><span class="glyphicon glyphicon-user"></span> Logout</a></li>
+                    <% } else { %>
+                    <% } %>-->
                     <li><a href="/auth/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
                     <li><a href="/auth/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
                 </ul>
