--- a/StackOverflowProject/views/authentication/login.hbs
+++ b/StackOverflowProject/views/authentication/login.hbs
@@ -19,7 +19,7 @@
                 <div style="padding-top:30px" class="panel-body">
                     <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 
-                    <form id="loginform" class="form-horizontal" role="form">
+                    <form id="loginform" class="form-horizontal" role="form" action="/auth/login" method = "post">
 
                         <div style="margin-bottom: 25px" class="input-group">
                             <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
@@ -30,8 +30,6 @@
                             <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
                             <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
                         </div>
-
-
                         <div class="input-group">
                             <div class="checkbox">
                                 <label>
@@ -42,7 +40,7 @@
 
                         <div style="margin-top:10px" class="form-group">
                             <div class="col-sm-12 controls">
-                                <a id="btn-login" href="#" class="btn btn-success">Login  </a>
+                                <p><button id="btn-login" type="submit" class="btn btn-success"> Sign Up</button></p>
                             </div>
                         </div>
 
