add session + save user id after login

--- a/StackOverflowProject/views/partials/layout.hbs
+++ b/StackOverflowProject/views/partials/layout.hbs
@@ -24,7 +24,7 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="/quastions/all">All quastions</a></li>
+                    <li><a href="/questions/all">All questions</a></li>
                     <li><a href="#">Profile</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
