--- a/StackOverflowProject/views/main/home.hbs
+++ b/StackOverflowProject/views/main/home.hbs
@@ -7,6 +7,9 @@
 </head>
 <body>
     {{> layout}}
+    {{#if true}} 
+        <h3>{{user.username}}</h3>
+    {{/if}}
     <h2>It works</h2>
 </body>
 </html>
