--- a/StackOverflowProject/views/questions/list.hbs
+++ b/StackOverflowProject/views/questions/list.hbs
@@ -3,9 +3,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Questions</title>
 </head>
-<body>
-
-</body>
+    <body>
+        {{> layout}}
+        <ul class="quesions_list">
+            {{#each questions}}
+            <li>
+                <h2>{{this.title}}</h2>
+                <h3>{{this.description}}</h3>
+            </li>
+            {{/each}}
+        </ul>
+    </body>
 </html>
