--- a/StackOverflowProject/views/profile/index.hbs
+++ b/StackOverflowProject/views/profile/index.hbs
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Profile</title>
+    <title>Questions</title>
 </head>
 <body>
     {{> layout}}
@@ -11,7 +11,7 @@
         <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
                 <div class="caption">
-                    <h3 style="text-align:center">{{user.name}}</h3>
+                    <h3 style="text-align:center">{{user.username}}</h3>
                 </div>
             </div>
         </div>
@@ -21,13 +21,9 @@
                     <h3 class="panel-title">Your manuals</h3>
                 </div>
                 <table class="table">
-                    @{
-                        var manuals= db.Manuals.Where(manual => manual.AuthorId == Model.Id);
-                    }
-                    @foreach (Manual manual in manuals)
-                    {
+                    {{#each questions}}
                     <tr>
-                        <td><a asp-controller="Home" asp-action="Manual" asp-route-id="@manual.ManualId">@Html.Raw(@manual.Title)</a></td>
+                        <td><h2><a href="/questions/{{this._id}}">{{this.title}}</a></h2></td>
                         <td>
                             <form method="post">
                                 <div class="dropdown">
@@ -42,16 +38,14 @@
                             </form>
                         </td>
                     </tr>
-                    }
+                    {{/each}}
                 </table>
             </div>
         </div>
         <div class="col-md-1">
-            <form method="post">
-                <button type="submit" class="btn btn-primary">
-                    Create new
-                </button>
-            </form>
+             <a href="/profile/createQuestion">
+                <button class="btn btn-primary">Create new</button>
+             </a>          
         </div>
     </div>
 </body>
