--- a/StackOverflowProject/views/questions/question.hbs
+++ b/StackOverflowProject/views/questions/question.hbs
@@ -3,9 +3,44 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>{{question.title}}</title>
+
+    <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/stylesheets/main.css" />
 </head>
 <body>
+    {{> layout}}
+    <div class="blog">
+        <div class="container">
+            <div class="row">
+                <div class="[ col-xs-12 col-sm-offset-0 col-sm-10 ]">
+                    <h2>{{question.title}}</h2>
+                    <hr />
+                    <h5>{{question.description}}</h5>
+                
+                    <b id="userName"><span class="glyphicon glyphicon-user"></span>{{user.username}}</b>
+                    <hr />
+                    <form id="addanswer" class="form-horizontal" method="post" action="/profile/addAnswer">
+                        <textarea name="text" id="message" class="form-control" rows="6" value=""></textarea>
+                        <div class="form-group" hidden="hidden">
+                            <input name="questionId" class="form-control" value={{question._id}} />
+                        </div>
+                        <div class="form-group">
+                            <input type="submit" value="Add" class="btn btn-default" style="color:blue; margin-top:10px;" />
+                        </div>
+                    </form>
+                    <hr />
 
+                    <table class="table">
+                        {{#each answers}}
+                        <tr>
+                            <td><h2>{{this.text}}</h2></td>
+                        </tr>
+                        {{/each}}
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
