improved home page, improved profile page

--- a/StackOverflowProject/views/main/home.hbs
+++ b/StackOverflowProject/views/main/home.hbs
@@ -7,9 +7,14 @@
 </head>
 <body>
     {{> layout}}
-    {{#if true}} 
-        <h3>{{user.username}}</h3>
-    {{/if}}
-    <h2>It works</h2>
+    <div class="col-lg-6 col-lg-offset-3 text-center">
+        <h2><span class="ion-minus"></span>Главное<span class="ion-minus"></span></h2>
+        <p>
+            Stack Overflow — популярная система вопросов и ответов о программировании, разработанная Джоэлем Спольски и Джеффом Этвудом (англ.) в 2008 году. Является частью Stack Exchange Network. Как и в других системах подобного рода, Stack Overflow предоставляет возможность оценивать вопросы и ответы, что поднимает или понижает репутацию зарегистрированных пользователей (вариант игрофикации). Проект создан с использованием ASP.NET 4 и ASP.NET MVC.
+            На июль 2014 года в базе данных веб-сайта хранилось почти 7,7 миллионов вопросов. В восьмерку наиболее популярных тем, согласно указываемым тегам, на Stack Overflow входят Java, C#, JavaScript, PHP, Android, jQuery, Python и HTML.
+            По данным на май 2017 года, сайт занимает 53 место по посещаемости во всём мире по рейтингу Alexa Internet, а количество уникальных посетителей составило в декабре 2010 года 18 миллионов человек[12]. В мае 2010 года создатели сайта объявили о том, что венчурный капитал Stack Overflow составил $6 млн.
+        </p><br>
+        <hr />
+     </div>
 </body>
 </html>
