--- a/StackOverflowProject/views/profile/index.hbs
+++ b/StackOverflowProject/views/profile/index.hbs
@@ -1,52 +1,109 @@
 ﻿<!DOCTYPE html>
-
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Questions</title>
+    <title>{{user.username}}</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../../public/stylesheets/list.css" />
+    <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="../../public/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
     {{> layout}}
-    <div class="row" style="margin-top: 10px;">
-        <div class="col-sm-6 col-md-3">
-            <div class="thumbnail">
-                <div class="caption">
-                    <h3 style="text-align:center">{{user.username}}</h3>
+    <div class="container">
+        <div class="table-wrapper">
+            <div class="table-title">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2>Manage <b>Questions</b></h2>
+                    </div>
+                    <div class="col-sm-6">
+                        <a href="/profile/createQuestion" class="btn btn-success" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add New Question</span></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="col-md-7">
-            <div class="panel panel-info">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Your manuals</h3>
-                </div>
-                <table class="table">
-                    {{#each questions}}
+            <table class="table table-striped table-hover">
+                <thead>
                     <tr>
-                        <td><h2><a href="/questions/{{this._id}}">{{this.title}}</a></h2></td>
-                        <td>
-                            <form method="post">
-                                <div class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                        <span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span>
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                                        <li><a asp-action="Delete" asp-route-id="@manual.ManualId">Delete</a></li>
-                                        <li><a asp-action="Edit" asp-route-id="@manual.ManualId">Edit</a></li>
-                                    </ul>
-                                </div>
-                            </form>
-                        </td>
+                        <th>
+                        </th>
+                        <th>Title</th>
+                        <th>Date</th>
+                        <th>Rating</th>
+                        <th>Actions</th>
                     </tr>
+                </thead>
+                <tbody>
+                    {{#each questions}}
+                    
+                        <tr>
+                            <td>
+                            </td>
+                            <td><a href="/questions/{{this._id}}">{{this.title}}</a></td>
+                            <td>{{this.date}}</td>
+                            <td>{{this.rating}}</td>
+                            <td>
+                                <a href="#editQuestionModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a href="#deleteQuestionModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                            </td>
+                        </tr>
                     {{/each}}
-                </table>
+                </tbody>
+            </table>
+        </div>
+    </div>
+    <!-- Edit Modal HTML -->
+    <div id="editQuestionModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/profile/editQuestion">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Edit Question</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" name="title" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label>
+                            <textarea class="form-control" name="description" rows="10" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-info" value="Save">
+                    </div>
+                </form>
             </div>
         </div>
-        <div class="col-md-1">
-             <a href="/profile/createQuestion">
-                <button class="btn btn-primary">Create new</button>
-             </a>          
+    </div>
+    <!-- Delete Modal HTML -->
+    <div id="deleteQuestionModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/profile/deleteQuestion">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Delete Question</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete these Records?</p>
+                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-danger" value="Delete">
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
 </body>
-</html>
+</html> 
