--- a/StackOverflowProject/views/profile/index.hbs
+++ b/StackOverflowProject/views/profile/index.hbs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../../public/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script src="../../public/javascripts/profile.js"></script>
 </head>
 <body>
     {{> layout}}
@@ -48,8 +49,8 @@
                             <td>{{this.date}}</td>
                             <td>{{this.rating}}</td>
                             <td>
-                                <a href="#editQuestionModal" class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                <a href="#deleteQuestionModal" class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                <a data-target="#editQuestionModal" data-id={{this._id}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a data-target="#deleteQuestionModal" data-id={{this._id}} class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
                     {{/each}}
@@ -65,6 +66,9 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Edit Question</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="questionId" id="questionId" value="" />
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
@@ -92,6 +96,9 @@
                     <div class="modal-header">
                         <h4 class="modal-title">Delete Question</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" name="questionId" id="questionId" value="" />
                     </div>
                     <div class="modal-body">
                         <p>Are you sure you want to delete these Records?</p>
