--- a/StackOverflowProject/views/profile/index.hbs
+++ b/StackOverflowProject/views/profile/index.hbs
@@ -31,25 +31,23 @@
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
-                        <th>
+                        <th>Date of creation
                         </th>
                         <th>Title</th>
-                        <th>Date</th>
+                        <th>LastUpdate</th>
                         <th>Rating</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
                     {{#each questions}}
-                    
                         <tr>
-                            <td>
-                            </td>
+                            <td>{{this.dateofcreation}}</td>
                             <td><a href="/questions/{{this._id}}">{{this.title}}</a></td>
-                            <td>{{this.date}}</td>
+                            <td>{{this.dateofupdate}}</td>
                             <td>{{this.rating}}</td>
                             <td>
-                                <a data-target="#editQuestionModal" data-id={{this._id}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                <a data-target="#editQuestionModal" data-id={{this._id}} data-title={{this.title}} data-description={{this.description}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
                                 <a data-target="#deleteQuestionModal" data-id={{this._id}} class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
                             </td>
                         </tr>
@@ -73,11 +71,11 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label>Title</label>
-                            <input type="text" name="title" class="form-control" required>
+                            <input type="text" name="title" title="title" class="form-control" required>
                         </div>
                         <div class="form-group">
                             <label>Description</label>
-                            <textarea class="form-control" name="description" rows="10" required></textarea>
+                            <textarea class="form-control" name="description" rows="10" description="description" required></textarea>
                         </div>
                     </div>
                     <div class="modal-footer">
@@ -97,8 +95,8 @@
                         <h4 class="modal-title">Delete Question</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                     </div>
-                    <div class="form-group">
-                        <input type="text" name="questionId" id="questionId" value="" />
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="questionId" id="questionId"/>
                     </div>
                     <div class="modal-body">
                         <p>Are you sure you want to delete these Records?</p>
