--- a/StackOverflowProject/views/questions/question.hbs
+++ b/StackOverflowProject/views/questions/question.hbs
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../../public/bootstrap-3.3.7-dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/stylesheets/main.css" />
+    <script src="../../public/javascripts/vote.js"></script>
 </head>
 <body>
     {{> layout}}
@@ -14,32 +15,60 @@
         <div class="container">
             <div class="row">
                 <div class="[ col-xs-12 col-sm-offset-0 col-sm-10 ]">
-                    <h2>{{question.title}}</h2>
-                    <hr />
-                    <h5>{{question.description}}</h5>
+                    <h2>
+                        {{question.title}}
+                    </h2>
 
-                    <b id="userName"><span class="glyphicon glyphicon-user"></span>{{user.username}}</b>
-                    <hr />
-                    <form id="addanswer" class="form-horizontal" method="post" action="/profile/addAnswer">
-                        <textarea name="text" id="message" class="form-control" rows="6" value=""></textarea>
+                    <form name="ratings" method="post" action="/profile/vote">
+                        <button type="submit" class="btn btn-default btn-sm" name="points" value=1>
+                            <span class="glyphicon glyphicon-thumbs-up"></span>
+                        </button>
+                        <button type="submit" class="btn btn-default btn-sm" name="points" value=-1>
+                            <span class="glyphicon glyphicon-thumbs-down"></span>
+                        </button>
                         <div class="form-group" hidden="hidden">
                             <input name="questionId" class="form-control" value={{question._id}} />
                         </div>
-                        <div class="form-group">
-                            <input type="submit" value="Add" class="btn btn-default" style="color:blue; margin-top:10px;" />
-                        </div>
+                        <b>{{question.rating}}</b>
                     </form>
-                    <hr />
-                    {{#each answers}}
-                    <b><span class="glyphicon glyphicon-user"></span>{{this.author}}</b>
-                    <div class="panel panel-default">
-                        <div class="panel-body">
-                            <div class="col-md-11">
-                                <p>{{this.text}}</p>
+
+                        <hr />
+                        <h5>{{question.description}}</h5>
+                        <b id="userName"><span class="glyphicon glyphicon-user"></span>{{user.username}}</b>
+                        <hr />
+                        <form id="addanswer" class="form-horizontal" method="post" action="/profile/addAnswer">
+                            <textarea name="text" id="message" class="form-control" rows="6" value=""></textarea>
+                            <div class="form-group" hidden="hidden">
+                                <input name="questionId" class="form-control" value={{question._id}} />
+                            </div>
+                            <div class="form-group">
+                                <input type="submit" value="Add" class="btn btn-default" style="color:blue; margin-top:10px;" />
+                            </div>
+                        </form>
+                        <hr />
+                        <h3>Comments:</h3>
+                        {{#each answers}}
+                        <b><span class="glyphicon glyphicon-user"></span>{{this.authorname}}</b>
+                        <form name="ratings" method="post" action="/profile/answervote">
+                            <button type="submit" class="btn btn-default btn-sm" name="points" value=1>
+                                <span class="glyphicon glyphicon-thumbs-up"></span>
+                            </button>
+                            <button type="submit" class="btn btn-default btn-sm" name="points" value=-1>
+                                <span class="glyphicon glyphicon-thumbs-down"></span>
+                            </button>
+                            <div class="form-group" hidden="hidden">
+                                <input name="answerId" class="form-control" value={{this._id}} />
+                            </div>
+                            {{this.rating}}
+                        </form>
+                        <div class="panel panel-default">
+                            <div class="panel-body">
+                                <div class="col-md-11">
+                                    <p>{{this.text}}</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    {{/each}}
+                        {{/each}}
                 </div>
             </div>
         </div>
