full cascade delete

--- a/StackOverflowProject/views/questions/question.hbs
+++ b/StackOverflowProject/views/questions/question.hbs
@@ -59,6 +59,9 @@
                             <div class="form-group" hidden="hidden">
                                 <input name="answerId" class="form-control" value={{this._id}} />
                             </div>
+                            <div class="form-group" hidden="hidden">
+                                <input name="questionId" class="form-control" value={{this.question}} />
+                            </div>
                             {{this.rating}}
                         </form>
                         <div class="panel panel-default">
