--- a/StackOverflowProject/views/questions/list.hbs
+++ b/StackOverflowProject/views/questions/list.hbs
@@ -22,6 +22,7 @@
                     <div class="panel-heading">
                         <h3 class="panel-title">ALL QUESTIONS</h3>
                     </div>
+                    
                     <table class="table table-striped table-hover">
                         <thead>
                             <tr>
@@ -36,19 +37,76 @@
                         <tbody>
                             {{#each questions}}
                             <tr>
-                                <td>{{this.dateofcreation}}</td>
+                                <td>{{formatDate this.dateofcreation 'MMMM Do YYYY, h:mm:ss a'}}</td>
                                 <td><a href="/questions/{{this._id}}">{{this.title}}</a></td>
-                                <td>{{this.dateofupdate}}</td>
+                                <td>{{formatDate this.dateofupdate 'MMMM Do YYYY, h:mm:ss a'}}</td>
                                 <td>{{this.rating}}</td>
                                 <td>
-                                    <a data-target="#editQuestionModal" data-id={{this._id}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
-                                    <a data-target="#deleteQuestionModal" data-id={{this._id}} class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                    {{#if (eq this.author ../user._id)}}
+                                        <a data-target="#editQuestionModal" data-id={{this._id}} data-title={{this.title}} data-text={{this.description}} class="edit" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Edit">&#xE254;</i></a>
+                                        <a data-target="#deleteQuestionModal" data-id={{this._id}} class="delete" data-toggle="modal"><i class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
+                                    {{/if}}
                                 </td>
                             </tr>
                             {{/each}}
                         </tbody>
                     </table>
                 </div>
+            </div>
+        </div>
+    </div>
+    <!-- Edit Modal HTML -->
+    <div id="editQuestionModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/profile/editQuestion">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Edit Question</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="questionId" id="questionId" value="" />
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" name="title" title="title" id="title" class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Description</label>
+                            <textarea class="form-control" name="description" id="text" rows="10" required></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-info" value="Save">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Modal HTML -->
+    <div id="deleteQuestionModal" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form method="post" action="/profile/deleteQuestion">
+                    <div class="modal-header">
+                        <h4 class="modal-title">Delete Question</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    </div>
+                    <div class="form-group" hidden="hidden">
+                        <input type="text" name="questionId" id="questionId" />
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure you want to delete these Record?</p>
+                        <p class="text-warning"><small>This action cannot be undone.</small></p>
+                    </div>
+                    <div class="modal-footer">
+                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-danger" value="Delete">
+                    </div>
+                </form>
             </div>
         </div>
     </div>
