question dao(search by tag need update)

--- a/StackOverflowProject/views/profile/index.hbs
+++ b/StackOverflowProject/views/profile/index.hbs
@@ -71,11 +71,11 @@
                     <div class="modal-body">
                         <div class="form-group">
                             <label>Title</label>
-                            <input type="text" name="title" id="title" class="form-control" required>
+                            <input type="text" name="title" id="title" class="form-control" vaule="" required>
                         </div>
                         <div class="form-group">
                             <label>Description</label>
-                            <textarea class="form-control" name="description" id="text" rows="10" description="description" required></textarea>
+                            <textarea class="form-control" name="description" id="text" rows="10" description="description" vaule="" required></textarea>
                         </div>
                     </div>
                     <div class="modal-footer">
